--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-
+<!-- Titre du site La chouette agence -->
     <title>.</title>
 
     
 <!-- Analytics -->
- 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2HGG4VZ7JL"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-2HGG4VZ7JL');
+	</script>
 <!-- Analytics END -->
     
 </head>
