--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
+<!-- style dans le html a retirer -->
 			<div class="navbar-header">
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
@@ -59,6 +60,7 @@
 					</li>
 					<li>
 					</li>
+<!-- Page 2 changer le titre par une page contact -->
 					<li>
 						<a href="page2.html">page2 &gt;</a>
 					</li>
@@ -74,11 +76,13 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
+<!--alt a modifier, ne detail pas vraiment l'image  -->
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
 				<div class="text-center">
+<!-- modifier le nom de la page 2 -->
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
@@ -104,6 +108,7 @@
 					Web design
 				</h3>
 				<p class="text-center ">
+<!-- &rsquo; = apostrophe -->
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
@@ -112,6 +117,7 @@
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
+<!-- &nbsp; = espace -->
 					&nbsp;Stratégie
 				</h3>
 				<p class="text-center ">
@@ -256,6 +262,7 @@
 					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
+<!-- partenaire sans lien avec le sujet du site ressemble a du black hat SEO pour google -->
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
