Commentaires de modification a éffectuer complet

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
+<!-- balise lang incorrect -->
 <html lang="Default">
 
 <head>
 	<meta charset="utf-8">
-
+<!-- mots clé plus pertinent en rapport avec le site et la localisation -->
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 	<!-- Description vide a remplir pour le SEO -->
@@ -62,6 +63,7 @@
 						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
 							web design, illustrations, design de site web, site web, web, internet, site internet, site
 						</div>
+						<!-- navtoggle a supprimer -->
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -114,6 +116,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
+						<!-- image text a retirer et mettre dans un paragraphe -->
 						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
 					</div>
 				</div>
@@ -159,7 +162,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<!-- referencement dans le alt -->
+						<!--Image qui affiche du texte a remplacer par un paragraphe -->
 						<img alt="agence web, agence web paris, web design paris, stratégie web"
 							src="img/citation.png" />
 
@@ -185,8 +188,8 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							qui seront facilement trouvable sur les moteurs de recherche. <br><br>
+							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -199,16 +202,18 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
+						<!-- image qui affiche du texte a remplacer -->
 						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
+						<!-- alt a modifier pour bien décrire l'image -->
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
-							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
-								class="img-responsive portfolio-thumb" /></a>
+						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
+						src="img/1.jpg"
+						alt="paris web design logo agence web meilleure agence et refonte site web journal"
+						class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
@@ -217,6 +222,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
+						<!-- alt a modifier pour bien décrire l'image -->
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
@@ -231,6 +237,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
+						<!-- alt a modifier pour bien décrire l'image -->
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.bmp" class="img-responsive portfolio-thumb"
@@ -244,6 +251,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
+						<!-- alt a modifier pour bien décrire l'image -->
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.bmp" class="img-responsive portfolio-thumb"
@@ -276,7 +284,7 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-
+<!-- on passe du bloc 5 au 8 ?? -->
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
@@ -288,6 +296,7 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
+								<!-- voir si rediriger vers la page d'acceuil ne joue pas en la defaveur du SEO ou mettre # -->
 									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
