--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<!-- balise lang incorrect -->
-<html lang="Default">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
-<!-- mots clé plus pertinent en rapport avec le site et la localisation -->
+	<!-- mots clé plus pertinent en rapport avec le site et la localisation -->
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 	<!-- Description vide a remplir pour le SEO -->
@@ -24,9 +23,8 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-	<!-- Titre du site La chouette agence -->
-	<title>.</title>
 
+	<title>La Chouette Agence</title>
 
 	<!-- Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -47,45 +45,29 @@
 	<div class="page-container">
 
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
 					<!-- style dans le html a retirer -->
 					<div class="navbar-header">
-						<!-- style n'empeche pas le referencement mais c'est pas clair -->
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
-						<!-- referencement dans le alt logo -->
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
-						<!-- navtoggle a supprimer -->
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-							data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
-								class="icon-bar"></span><span class="icon-bar"></span>
-						</button>
+								alt="Logo du site représentant un hibou" /></a>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
+							<!-- supprimer acceuil ?? lien redondant vers la meme page -->
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-							</li>
-							<!-- Page 2 changer le titre par une page contact -->
-							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
 					</div>
 				</nav>
 			</div>
-		</div>
+		</header>
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
@@ -94,15 +76,13 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<!--alt a modifier, ne detail pas vraiment l'image  -->
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="La chouette agence, agence web paris, création logo paris" />
+						<img src="img/logo.png" class="center-block image-resize-mode"
+							alt="Logo du site, hibou dégrader de jaune sur fond gris" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
 						</h1>
 						<div class="text-center">
-							<!-- modifier le nom de la page 2 -->
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
 						</div>
 					</div>
@@ -114,11 +94,9 @@
 		<!-- bloc-2-services -->
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<!-- image text a retirer et mettre dans un paragraphe -->
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
-					</div>
+				<div class="row text-center promesse">
+					<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir
+						attractives et visibles sur internet</h2>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
@@ -129,8 +107,7 @@
 							Web design
 						</h3>
 						<p class="text-center ">
-							<!-- &rsquo; = apostrophe -->
-							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
+							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
 						</p>
 					</div>
@@ -139,8 +116,7 @@
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
-							<!-- &nbsp; = espace -->
-							&nbsp;Stratégie
+							Stratégie
 						</h3>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
@@ -162,9 +138,11 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<!--Image qui affiche du texte a remplacer par un paragraphe -->
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
-							src="img/citation.png" />
+						<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer
+							l'essence de notre
+							entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à
+							Lyon."</p>
+						<span>Maxime Guibard, PDG de À vos fourchettes</span>
 
 					</div>
 				</div>
@@ -189,7 +167,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -200,20 +178,16 @@
 		<!-- bloc-4-portfolio -->
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<!-- image qui affiche du texte a remplacer -->
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
-					</div>
+				<div class="row text-center promesse">
+						<p>Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.</p>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<!-- alt a modifier pour bien décrire l'image -->
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
-						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-						src="img/1.jpg"
-						alt="paris web design logo agence web meilleure agence et refonte site web journal"
-						class="img-responsive portfolio-thumb" /></a>
+						<a href="#" data-lightbox="img/1.bmp" data-gallery-id="gallery-1"
+							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
+								src="img/1.bmp"
+								alt="photo de cahier ouvert en plusieurs colorie"
+								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
@@ -222,11 +196,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<!-- alt a modifier pour bien décrire l'image -->
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								src="img/2.bmp" class="img-responsive portfolio-thumb"
+								alt="Photo d'une photographe avec son apareil photo" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -237,11 +210,10 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<!-- alt a modifier pour bien décrire l'image -->
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								alt="Photo de differents outils pour enregistrer des videos ou des photos" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -251,11 +223,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<!-- alt a modifier pour bien décrire l'image -->
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								alt="Photo de maquette de site web et d'un ordinateur pour le concevoir" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -277,93 +248,48 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html"
+						<a href="contact.html"
 							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-<!-- on passe du bloc 5 au 8 ?? -->
+		<!-- on passe du bloc 5 au 8 ?? -->
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
 						<p class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
-						<div class="row row-no-gutters social">
+						<!-- <div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-								<!-- voir si rediriger vers la page d'acceuil ne joue pas en la defaveur du SEO ou mettre # -->
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<!-- balise style a retirer -->
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
-						</div>
-						<div class="row">
-							<!-- partenaire sans lien avec le sujet du site ressemble a du black hat SEO pour google -->
-							<div class="col-sm-4">
-								Partenaires
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 1
-								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 2
-								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-								</ul>
-							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
-		</div>
+		</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
