--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
 	<meta charset="utf-8">
-	<!-- mots clé plus pertinent en rapport avec le site et la localisation -->
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 	<!-- Description vide a remplir pour le SEO -->
-	<meta name="description" content="">
+	<meta name="description" content="La chouette agence situé à Lyon est une grande agence de web design qui vous apporteras beaucoup de prospects">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<!-- icone du site avant le titre -->
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -82,8 +79,8 @@
 							La chouette agence.
 						</h1>
 						<div class="text-center">
-							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">Contact</a>
+							<a href="#bloc-3-what-i-do" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+								id="cta-hero">En apprendre d'avantage</a>
 						</div>
 					</div>
 				</div>
@@ -167,7 +164,6 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-							<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -261,31 +257,31 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center black">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
-						<!-- <div class="row row-no-gutters social">
+						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com" aria-label="logo de twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://fr-fr.facebook.com" aria-label="logo de facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com" aria-label="logo de dribble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com" aria-label="logo d'instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</div>
 			</div>
