--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.png" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.png" alt="photo de cahier ouvert en plusieurs colorie"
 								class="img-responsive portfolio-thumb" /></a>
@@ -191,7 +191,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.png" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.png" class="img-responsive portfolio-thumb"
 								alt="Photo d'une photographe avec son apareil photo" /></a>
@@ -205,7 +205,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.png" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.png" class="img-responsive portfolio-thumb"
 								alt="Photo de differents outils pour enregistrer des videos ou des photos" /></a>
@@ -218,7 +218,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.png" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.png" class="img-responsive portfolio-thumb"
 								alt="Photo de maquette de site web et d'un ordinateur pour le concevoir" /></a>
